20060909
 - (dtucker) [openbsd-compat/bsd-snprintf.c] Add stdarg.h.
 - (dtucker) [contrib/aix/buildbff.sh] Always create privsep user.

20060908
 - (dtucker) [auth-sia.c] Add includes required for build on Tru64.  Patch
   from Chris Adams.
 - (dtucker) [configure.ac] The BSM header test needs time.h in some cases.

20060907
 - (djm) [sshd.c auth.c] Set up fakepw() with privsep uid/gid, so it can
   be used to drop privilege to; fixes Solaris GSSAPI crash reported by
   Magnus Abrante; suggestion and feedback dtucker@
   NB. this change will require that the privilege separation user must
   exist on all the time, not just when UsePrivilegeSeparation=yes
 - (tim) [configure.ac] s/BROKEN_UPDWTMP/BROKEN_UPDWTMPX/ on SCO OSR6
 - (dtucker) [loginrec.c] Wrap paths.h in HAVE_PATHS_H.
 - (dtucker) [regress/cfgmatch.sh] stop_client is racy, so give us a better
   chance of winning.

20060905
 - (dtucker) [configure.ac] s/AC_DEFINES/AC_DEFINE/ spotted by Roumen Petrov.
 - (dtucker) [loginrec.c] Include paths.h for _PATH_BTMP.

20060904
 - (dtucker) [configure.ac] Define BROKEN_UPDWTMP on SCO OSR6 as the native
   updwdtmp seems to generate invalid wtmp entries.  From Roger Cornelius,
   ok djm@

20060903
 - (dtucker) [configure.ac openbsd-compat/openbsd-compat.h] Check for
   declaration of writev(2) and declare it ourselves if necessary.  Makes
   the atomiciov() calls build on really old systems.  ok djm@

20060902
 - (dtucker) [openbsd-compat/port-irix.c] Add errno.h, found by Iain Morgan.
 - (dtucker) [ssh-keyscan.c ssh-rand-helper.c ssh.c sshconnect.c
   openbsd-compat/bindresvport.c openbsd-compat/getrrsetbyname.c
   openbsd-compat/port-tun.c openbsd-compat/rresvport.c] Include <arpa/inet.h>
   for hton* and ntoh* macros.  Required on (at least) HP-UX since we define
   _XOPEN_SOURCE_EXTENDED.  Found by santhi.amirta at gmail com.

20060901
 - (djm) [audit-bsm.c audit.c auth-bsdauth.c auth-chall.c auth-pam.c]